--- a/app/src/main/res/layout/recording_preview.xml
+++ b/app/src/main/res/layout/recording_preview.xml
@@ -38,4 +38,27 @@
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/wordBeingSigned"
         app:layout_constraintTop_toBottomOf="@+id/wordBeingSigned" />
+
+    <Button
+        android:id="@+id/button_accept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="Accept"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/videoPreview"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_reject"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="Reject"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/videoPreview"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
