--- a/app/src/main/res/layout/recording_list.xml
+++ b/app/src/main/res/layout/recording_list.xml
@@ -77,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.8"
-        android:background="#000000" />
+        android:background="#000000"
+        android:orientation="horizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
