UI updates (recording light added, visual feedback when recording a sign)

--- a/app/src/main/res/layout/word_prompt.xml
+++ b/app/src/main/res/layout/word_prompt.xml
@@ -48,4 +48,20 @@
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/instructions" />
 
+    <!--    <LinearLayout-->
+<!--        android:id="@+id/videoRecordingLight"-->
+<!--        android:layout_width="17dp"-->
+<!--        android:layout_height="17dp"-->
+<!--        android:background="@+id/recording_light"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/view"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/view"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view" />-->
+<!--    <View-->
+<!--        android:id="@+id/videoRecordingLight"-->
+<!--        android:layout_width="10dp"-->
+<!--        android:layout_height="10dp"-->
+<!--        android:background="@+id/recording_light" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
