--- a/app/src/main/res/layout/save_record.xml
+++ b/app/src/main/res/layout/save_record.xml
@@ -23,17 +23,18 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="300dp"
-        android:layout_height="240dp"
-        android:text="To continue recording, swipe left.\nTo save your recordings, swipe right."
+        android:layout_width="350sp"
+        android:layout_height="300sp"
+        android:gravity="center"
+        android:text="To continue recording, swipe left.\n\nTo save your recordings, swipe right."
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
         android:textSize="32sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.50" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
