--- a/app/src/main/res/layout/activity_splash_revised.xml
+++ b/app/src/main/res/layout/activity_splash_revised.xml
@@ -176,4 +176,17 @@
         app:layout_constraintTop_toBottomOf="@+id/sensorHeader"
         app:layout_constraintVertical_bias="0.073" />
 
+    <TextView
+        android:id="@+id/ring_status"
+        android:layout_width="250dp"
+        android:layout_height="28dp"
+        android:text="Ring Sensor: Not Connected"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.198"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wrist_status"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
